@@ -49,8 +49,9 @@
 <!ENTITY euskalbar.prefs.lang.caption "Idioma">
 <!ENTITY euskalbar.prefs.lang.label "Al iniciar Euskalbar, elegir el siguiente idioma:">
 <!ENTITY euskalbar.prefs.tabs.caption "Preferencias de las pestañas">
-<!ENTITY euskalbar.prefs.combined.caption "Consulta combinada">
+<!ENTITY euskalbar.prefs.combined.caption "Opciones de las consultas combinadas">
 <!ENTITY euskalbar.prefs.timeout.caption "Tiempo límite (seg)">
+<!ENTITY euskalbar.prefs.subqueries.caption "Consultar subentradas">
 <!ENTITY euskalbar.prefs.skin.caption "Skins">
 <!ENTITY euskalbar.prefs.skin.label "Elegir skin para Euskalbar:">
 
